<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DeviceActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/back_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/weeklyConsumption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/left_rounder_button"
                android:text="@string/weeklyConsumption"
                app:layout_constraintEnd_toStartOf="@+id/monthlyConsumption"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back" />

            <Button
                android:id="@+id/monthlyConsumption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/green_700"
                android:text="@string/monthlyConsumption"
                app:layout_constraintEnd_toStartOf="@+id/annualConsumption"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/weeklyConsumption"
                app:layout_constraintTop_toTopOf="@+id/weeklyConsumption" />

            <Button
                android:id="@+id/annualConsumption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/right_rounder_button"
                android:text="@string/annual_consumption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/monthlyConsumption"
                app:layout_constraintTop_toTopOf="@+id/weeklyConsumption" />

            <TextView
                android:id="@+id/energyConsumption"
                style="@style/normalTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthlyConsumption"
                tools:text="1000 kWh" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/backgroundDarkBlackColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBackground">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_device" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/addDeviceTextView"
            style="@style/normalTextWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_device"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/bottomBackground"
            app:layout_constraintEnd_toStartOf="@+id/addDeviceButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBackground" />

        <ImageButton
            android:id="@+id/addDeviceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/add"
            app:layout_constraintBottom_toTopOf="@+id/bottomBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBackground" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>