<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EnergyMeterActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:listitem="@layout/item_energy_meter" />

        <LinearLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/homes"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/homes_layout_icon"
                android:text="@string/homes_bar"
                android:textAllCaps="false"
                android:textColor="@color/green_500"
                android:textSize="20sp" />

            <Button
                android:id="@+id/energyMeter"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/counter_bar_icon"
                android:text="@string/counters_bar"
                android:textAllCaps="false"
                android:textColor="@color/green_500"
                android:textSize="20sp" />

            <Button
                android:id="@+id/settings"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/settings_bar_icon"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/green_500"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_energy_meter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addEnergyMeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/add"
            app:layout_constraintBottom_toTopOf="@+id/bar"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/scanEnergyMeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/scan_icon"
            app:layout_constraintBottom_toTopOf="@+id/addEnergyMeter"
            app:layout_constraintEnd_toEndOf="@+id/addEnergyMeter"
            app:layout_constraintStart_toStartOf="@+id/addEnergyMeter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>